<resources>
    <string name="app_name">Travel scope</string>
    <string name="app_title">The app for the journey of your dreams</string>
    <string name="welcome">Welcome</string>
    <string name="reset">Reset password</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="repassword">Repeat password</string>
    <string name="sign_in">Sign In</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>


    //startup
    <string name="login_network_error">login_network_error</string>
    <string name="login_unknown_error">login_unknown_error</string>
    <string name="login_email">login_email</string>
    <string name="login_password">login_password</string>
    <string name="login_email_invalid">login_email_invalid</string>
    <string name="login_email_unknown">login_email_unknown</string>
    <string name="login_password_empty">login_password_empty</string>
    <string name="login_password_not_valid">login_password_not_valid</string>

    //main
    <string name="roadmap_title">roadmap_title</string>
    <string name="tour_title">tour_title</string>
    <string name="chat_title">chat_title</string>
    <string name="search_tour">search_tour</string>
    <string name="only_own">Only own</string>
    <string name="enter_message">Enter Message</string>
    <string name="name">Full name</string>
    <string name="change">Change</string>
    <string name="phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="location">Location</string>
    <string name="localiz_access">Do you want to give access to your localization to other participants of the tour?</string>
    <string name="faq_1">1. How to turn off location?</string>
    <string name="faq_1_text">Is this content dynamically downloaded?</string>
    <string name="faq_1_answer">Yes. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="faq_2_text">Is this content dynamically downloaded?</string>
    <string name="faq_2_answer">Yes. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="faq_3_text">Is this content dynamically downloaded?</string>
    <string name="faq_3_answer">Yes. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

</resources>